# tom

./: .gitignore  CMakeLists.txt  README.md  adam.c  adam.h  adam_conv2d.h  binary_crossentropy.c  binary_crossentropy.h  build  conv2d.c  conv2d.h  conv2d_test.c  crossentropy.c  crossentropy.h  dense.c  dense.h  dropout.c  dropout.h  errors.h  headers.h  iris_test  iris_test.c  matrix.c  matrix.h  maxpool2d.c  maxpool2d.h  mnist_conv_test.c  mnist_model_test.c  mnist_test  mnist_test.c  mnist_test_complex  mnist_test_complex.c  model.c  model.h  model_test.c  mse.c  mse.h  random.c  serialize.c  serialize.h  (+9 more)
documentation/: examples.md  layers.md  loss.md  matrix.md  misc.md  model.md  optimizers.md  tom.md
examples/: iris.c  iris_heavy_test.c  mnist.c
include/: adam.h  adam_bn.h  adam_conv2d.h  adam_quadratic.h  batch_normalization.h  binary_crossentropy.h  conv2d.h  crossentropy.h  dataset.h  declspec.h  dense.h  dropout.h  errors.h  leaky_relu.h  mae.h  matrix.h  maxpool2d.h  model.h  mse.h  normalization.h.experimental  padding2d.h  quadratic.h  random.h  relu.h  rmsprop.h  rmsprop_bn.h  rmsprop_conv2d.h  rmsprop_quadratic.h  serialize.h  sgd.h  sgd_bn.h  sgd_conv2d.h  sgd_quadratic.h  sigmoid.h  softmax.h  tanh.h  tom.h  version.h
src/: adam.c  adam_bn.c  adam_conv2d.c  adam_quadratic.c  batch_normalization.c  binary_crossentropy.c  conv2d.c  crossentropy.c  dataset.c  dense.c  errors.c  leaky_relu.c  mae.c  matrix.c  model.c  normalization.c.experimental  padding2d.c  quadratic.c  random.c  relu.c  rmsprop.c  rmsprop_bn.c  rmsprop_conv2d.c  rmsprop_quadratic.c  serialize.c  sgd.c  sgd_bn.c  sgd_conv2d.c  sgd_quadratic.c  sigmoid.c  softmax.c  tanh.c  version.c
tests/: conv2d_test.c  dropout_test.c  iris_model_serialize_test.c  iris_model_test.c  mnist_model_test.c  model_test.c  normalization_test.c  padding_test.c  (+2 more)
